update CV and publication

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,20 +1,22 @@
 ---
 ---
-
-@article{DJL21Empirical,
-  title = {Empirical Approximation to Invariant Measures for {McKean--Vlasov} Processes: Mean-Field Interaction vs Self-Interaction},
-  author = {Du, Kai and Jiang, Yifan and Li, Jinfeng},
-  year = {2021},
-  month = dec,
-  number = {arXiv:2112.14112},
-  eprint = {2112.14112},
-  publisher = {{arXiv}},
-  journal= {To appear in Bernoulli},
-  abstract = {This paper proves that, under a monotonicity condition, the invariant probability measure of a McKean--Vlasov process can be approximated by weighted empirical measures of some processes including itself. These processes are described by distribution dependent or empirical measure dependent stochastic differential equations constructed from the equation for the McKean--Vlasov process. Convergence of empirical measures is characterized by upper bound estimates for their Wasserstein distance to the invariant measure. The theoretical results are demonstrated via a mean-field Ornstein--Uhlenbeck process.},
-  abbr={arXiv},
-  bibtex_show={true},
-  arxiv={2112.14112}
+@article{DJL23Empirical,
+author = {Du, Kai and Jiang, Yifan and Li, Jinfeng},
+title = {Empirical approximation to invariant measures for {McKean--Vlasov} processes: Mean-field interaction vs self-interaction},
+volume = {29},
+journal = {Bernoulli},
+number = {3},
+publisher = {Bernoulli Society for Mathematical Statistics and Probability},
+pages = {2492 -- 2518},
+abstract = {This paper proves that, under a monotonicity condition, the invariant probability measure of a {McKean--Vlasov} process can be approximated by weighted empirical measures of some processes including itself. These processes are described by distribution dependent or empirical measure dependent stochastic differential equations constructed from the equation for the {McKean--Vlasov} process. Convergence of empirical measures is characterized by upper bound estimates for their Wasserstein distances to the invariant measure. Numerical simulations of the mean-field {Ornstein--Uhlenbeck} process are implemented to demonstrate the theoretical results.},
+year = {2023},
+month = aug,
+abbr={Bernoulli},
+arxiv={2112.14112},
+bibtex_show={true},
+selected={true},
 }
+
 
 @article{JL21Convergence,
   title = {Convergence of the {Deep BSDE} Method for {FBSDEs} with Non-{Lipschitz} Coefficients},
