--- a/_posts/2023-04-28-cont_cov.md
+++ b/_posts/2023-04-28-cont_cov.md
@@ -36,7 +36,7 @@ But, can we circumvent using Kolmogorov theorem?
  By assmuption we take positive definite matrix
 \begin{equation*} M= \begin{pmatrix} C(y,y) &C(y,x_{1}) & C(y,x_{2}) \\ C(x_{1},y)&C(x_{1},x_{1})  & C(x_{1},x_{2})  \\   C(x_{2},y)& C(x_{2},x_{1}) & C(x_{2},x_{2})
 \end{pmatrix}\end{equation*}
-and vecter \begin{equation*} \alpha =\begin{pmatrix}C(x_{2},y)-C(x_{1},y)\\ C(x_{1},y)-C(x_{2},y)\\ C(x_{1},x_{1})+C(x_{2},x_{2})-2C(x_{1},x_{2}) \end{pmatrix}.\end{equation*}
+and vecter \begin{equation*} \alpha =\begin{pmatrix} C(x_{1},x_{1})+C(x_{2},x_{2})-2C(x_{1},x_{2}) \\ C(x_{2},y)-C(x_{1},y)\\ C(x_{1},y)-C(x_{2},y)\end{pmatrix}.\end{equation*}
 Then we notice $\alpha^{\intercal} M\alpha \geq 0$ is equivalent to
  \begin{equation*}
  [C(x_1,y)-C(x_2,y)]^2 \leq 4 C(y,y)[C(x_{1},x_{1})+C(x_{2},x_{2})-2C(x_{1},x_{2})].
