--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -63,3 +63,18 @@
   arxiv       = {2301.09913}
 }
 
+
+@misc{BHJO23Wasserstein,
+  title       = {Wasserstein Distributional Robustness of Neural Networks},
+  author      = {Bai, Xingjian and He, Guangyi and Jiang, Yifan and Obłój, Jan},
+  year        = {2023},
+  month       = jun,
+  number      = {arXiv:2306.09844},
+  eprint      = {2306.09844},
+  publisher   = {{arXiv}},
+  abstract    = {Deep neural networks are known to be vulnerable to adversarial attacks (AA). For an image recognition task, this means that a small perturbation of the original can result in the image being misclassified. Design of such attacks as well as methods of adversarial training against them are subject of intense research. We re-cast the problem using techniques of Wasserstein distributionally robust optimization (DRO) and obtain novel contributions leveraging recent insights from DRO sensitivity analysis. We consider a set of distributional threat models. Unlike the traditional pointwise attacks, which assume a uniform bound on perturbation of each input data point, distributional threat models allow attackers to perturb inputs in a non-uniform way. We link these more general attacks with questions of out-of-sample performance and Knightian uncertainty. To evaluate the distributional robustness of neural networks, we propose a first-order AA algorithm and its multi-step version. Our attack algorithms include Fast Gradient Sign Method (FGSM) and Projected Gradient Descent (PGD) as special cases. Furthermore, we provide a new asymptotic estimate of the adversarial accuracy against distributional threat models. The bound is fast to compute and first-order accurate, offering new insights even for the pointwise AA. It also naturally yields out-of-sample performance guarantees. We conduct numerical experiments on the CIFAR-10 dataset using DNNs on RobustBench to illustrate our theoretical results. Our code is available at <a href="https://github.com/JanObloj/W-DRO-Adversarial-Methods"> here</a>.},
+  abbr        = {arXiv},
+  bibtex_show = {true},
+  arxiv       = {2306.09844}
+}
+
