upade neurips paper

--- a/_posts/2023-04-28-cont_cov.md
+++ b/_posts/2023-04-28-cont_cov.md
@@ -1,5 +1,5 @@
 ---
-layout: post
+layout: distill
 title: Continuity of Covariance Operator
 date: 2023-04-28
 description: 
@@ -18,7 +18,7 @@ We start with Kolmogorov continuity theorem which lies in the central of the con
     Then \(X\) has a \(\gamma\)–Hölder continuous modification for any  \(0 <\gamma <\beta/\alpha \).
 </div>
 By noticing the ultracontractivity of Gaussion measures,  we immediately derive that fractional Brownian motion $ B^{H} $ has a $\gamma$–Hölder modification where $0< \gamma < H$.
-More generally, we can show for any centered random Gaussian field $\\{X(x)\\}_{x\in\bR^{d}}$  with covariance $C$ has a $\gamma$–Hölder modification where $0< \gamma < H$ if
+More generally, we can show for any centered random Gaussian field $\\{X(x)\\}_{x\in\mathbb{R}^{d}}$  with covariance $C$ has a $\gamma$–Hölder modification where $0< \gamma < H$ if
 \begin{equation}
     \label{eq-C}
     C(x,x)+C(y,y)-2C(x,y)\leq K|x-y|^{2H}.
@@ -28,7 +28,7 @@ This, of course, implies the continuity of $C$.
 But, can we circumvent using Kolmogorov theorem?
 
 <div class="prop">
-    Let \(C:\bR^{d}\times\bR^{d}\to\bR\) be symmetric, locally bounded, and positive definite in the sense that for any finite collection \(\{x_{i}\}_{i=1}^{m}\) in \(\bR^{d}\), the martix \(M_{ij}=C(x_{i},x_{j})\) is positive definite.
+    Let \(C:\mathbb{R}^{d}\times\mathbb{R}^{d}\to\mathbb{R}\) be symmetric, locally bounded, and positive definite in the sense that for any finite collection \(\{x_{i}\}_{i=1}^{m}\) in \(\mathbb{R}^{d}\), the martix \(M_{ij}=C(x_{i},x_{j})\) is positive definite.
     Then \eqref{eq-C} implies the jointly continuity of \(C\).
 </div>
 
