Reformat and add .prettierrc file

--- a/_posts/2023-04-28-cont_cov.md
+++ b/_posts/2023-04-28-cont_cov.md
@@ -2,9 +2,9 @@
 layout: distill
 title: Continuity of Covariance Operator
 date: 2023-04-28
-description: 
-tags: ['Gassuian random field']
-categories: ['brain teasers']
+description:
+tags: ["Gassuian random field"]
+categories: ["brain teasers"]
 ---
 
 We start with Kolmogorov continuity theorem which lies in the central of the continuous martingale theory.
